@@ -3,6 +3,8 @@ Changes in version 0.8-9 (??-??-2015)
 
 - Better layout for result window when Simes test is used.
 
+- Saving a graph now asks which properties should also be saved.
+
 - Nodes (Colors/Sizes)
 
 - Improved Edges
